--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,24 @@
-#Node modules
-node_modules
-#logs
+# Logs
+logs
 *.log
-#Environment variables
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
 .env
-#Build files
-build/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
